@@ -14,6 +14,7 @@ DIST grsecurity-sources-extras-4.9.58.tar.xz 2692352 SHA256 6e523d29a005066ebbbf
 DIST grsecurity-sources-extras-4.9.59.tar.xz 2707208 SHA256 d762fe59ee49fd17d0df45b5a0385d6529461cb4c30fc0d4f8bb34d89b3cdea3 SHA512 3bac936e1bb3abd06bbe1c596a9e7342deedf92386e30a1796cca31df2193f8920f4ca5e865ca2ccfd2af145b22620433f84cc6fb59c5ef2c255781f64d8423b WHIRLPOOL 21637e797b14cfddad04a929b08d5d4fd949479d5f1ab7d01f12d75e1f057f1fe6baf9c1df375b08f69c67cb097f79a29308999cd60648698a32d91416baaa23
 DIST grsecurity-sources-extras-4.9.64.tar.xz 2779744 SHA256 b10630c0dd3b9c89d44652260c9418f6d9188d2839103a6b883959c2936e491c SHA512 1dbfbca58c7b55dd5e6cb80d81d4444440fbfe54f5b4a3dbe000c5300c51618eacfd61394c030f29f3fc02d6ecf5af09b7bdfc0523f185dd3ab242c1f479b43b WHIRLPOOL a27fffcf78d64a4c5d08a107eaf0bd3330862df17038c870ad6b044fba1f288fc3a43b0c049e83376c9b483099d7303d0cd2ebddc5d515c640f5e5fffc82904c
 DIST grsecurity-sources-extras-4.9.65.tar.xz 2783720 SHA256 143441ab00ae67060294fc4463a7e0385a529740d41fabef686e030d171f3134 SHA512 b37526937ba13e8f68e01a580561c3d15ca717226b17f985478a1bbea90c5d0be614ecc0a0f8143732b83fb19315fdb9c11680d17c5888b8d550c73242cb8860 WHIRLPOOL 9fa2f3a1eab60964d894cbad25ddc0c50a65766c48641feeee31aedd382e33c65711b42805dc7b86af2e525b028345a8dd659edc8ef35912777802505087b802
+DIST grsecurity-sources-extras-4.9.67.tar.xz 2823248 SHA256 9625dfdfd3134b0024017c2febcecd0af50e4c8c507dc2e9cacaaf29cc53cb43 SHA512 cff73f6c6be07f1231719f827488ed86c2cc8ad032a9ee3fbc1846d49967a01a7119d3de81e4c86ae3a3baf67c4d027ca9b74f122348fa40ba2d4a227d06b6e8 WHIRLPOOL 333c58070c75f35d52e83dd9c293f17ab16c324b0ded5c4ae28258e0e4b90059bacb1756aa46c8be01586d9463ad3460555fb5eae61f5aa7535b0c7ee52db77d
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -28,21 +29,22 @@ EBUILD grsecurity-sources-4.9.58.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.59.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.64.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.65.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 2701 SHA256 c573db1c15f8d3111cea85c1d19b244d358d3dbfa1903bd1282e8cbe36f2c595 SHA512 50b99797afd94bb3304a91f51ae40a20633c36cce28e8bd3483c7f65a62da0f3f3af81a71f82ade3a90e33a5c8525e4aac1627bd1149923988fa94e09395d0c9 WHIRLPOOL 943f7a869ad5e28af847d831449e09646e206cd863b6345a08529a5269801f6d1ef062c09b573f4208edaf255a9d4ad8e0f3a2ee729c4aba493fc85f0a687a50
+EBUILD grsecurity-sources-4.9.67.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 2896 SHA256 1659c4891cbde19fc47f8b744aa9fd7a2d1bdb8296446c82b031c952cc22017d SHA512 ae43e77c70c2db996aedee0652264c88da82c78c84497df294ce9f2fe775407a3da3fdd26598183218ce5fb63919152ce8f21258cff09721be4e68efc118b48a WHIRLPOOL b307c7a0550a421c3e3320591b84c838213abb51a7666a3e2086360fd2e8115ac77da3501ab561b72e94e74ed57966bc11aa2f0fb9ac225ce4995ff592148a5d
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAloYLFUACgkQunvTUHGU
-RZ8+gA//S6oFg6tOuLWk06dvbOa5LmFruNjUZGcSpz6kXLmOt/YlsmIGd6aNaQNY
-MjiHuBqrmH72B2MNygeIsPp6biarX6wyrYOwBqT/zuZ5dAzm2+nX02Mf7l/4uspv
-swzJi+Or9DQYT0CAyAcGPb27NBNEFWjUBIU2SYUq1y+hENRhGvLHsi9i70toCC6t
-WH9m0No28MHrn3/2RPY2K4sW/YK6X4Ev1r7dQ0LgCdTpuJmOcVm/XB3x8NdYwBtG
-geQEjbEb4Ea/2SEA4QSXjANQebHzcKkWQ1ZJLq5ghWqhdk3ec34Cc98lpBJYXSZX
-HIItW4u3hztRluwcw0LZ0LBf+pe5GQA6rZFVaZCQ0nAg8WY1/ePcKWQs67TCcJ1b
-ijcSNGerTXtAvzIAvJJL/AkWI1bw0EBlSnF1ricTCxOADzh6HMSGmrYvFx20jEb3
-aLAeuB/R2rUnZrCQWTKT6ER7O0XwnR+BEE+SD6jzMOLH+0a9K6PIJHwNlglofmOn
-MMMzw1kMkKyelvziGKzIEyo/BN5eIPHjjTOv4r8EhEWsFnw9kqU2MDa++lfYsv4D
-sHn86LbsWiTKlinGX89v8LZbLY4Zg6xAVvvRG9Ywxn4QQtn37Oxt5CjgIajIeHno
-PjxyqsCNdAD0snn0JxCqpgvzNzVX/wfdOtC5TgjyI4IrNm/0ieA=
-=S7eY
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlooOD8ACgkQunvTUHGU
+RZ/jrg//e8ZvgpldR8R+qEyOosExQdtW8AwGJYuKR5DIgVIX6/6RE+6REJcKZWYE
+ZSlAqyzEQEF4OtkPvShjfcxlFGRGNnWztuOfAUNnDBka0unMzWEa+YsHHllhb8cd
+WuYddcPgHr4EfqNbPsKO2sfQZ6HxmCY6MUJd04IRayPb4hv2WMp79fPBJaob9YCD
+bQTY72Rq3BHiEkl3NEQok7tovqBukCgSu0K+fYxqYGMFjnzgSbxtLCb7PiE/kMYN
+ur1Zz1fYc5rltMN7ohSgNlI4JeK78+tI59lV6rr/xFxFGYsx1kNrFokutxLE5vgW
+MniBvz5TpaaK+M86r/CHoc3vQkmug48gI32VsbuONHYR9p4GsAMduDK5l0zE9CWk
+sjzVmvvLJ/fgjxuu/Rr0NsVbkeEkr62yyL5/D5vA5iBa3u66tBT/4ULL56uxO0WY
+g/72jWQj3fa8f8BRWMTy776YqV9oI5vmMf/8KbtcCIoppXSJeipr3IHDQiOCPp9G
+1iO3mSzUJNR+oeddiLxR4Y9N4qH7h6Rql0OCY87fe/8EXBz4/ZsrSgBzveXrNCup
++ndiGC93YknU4YqcIHVx2S868kgd/WQflm3z5xUV0QjNFt2IIUN2SE48wEdHUYQT
+hHYaMRg5FbiC31+Z9ZlGGUxUOqKGwzpNzwyMnW/zkBgLRQu9XVI=
+=421P
 -----END PGP SIGNATURE-----
